upg_loadme_app_kubectl_codebase/upg-loadme.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: upg-loadme-app
  namespace: demo
  labels:
    app: upg-loadme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme-app
  template:
    metadata:
      name: upg-loadme-app
      labels:
        app: upg-loadme-app
    spec:
      containers:
        - name: upg-loadme-app
          # update image id (manual or via jenkins)
          image: 262925688068.dkr.ecr.us-east-1.amazonaws.com/capstone-project-ecr
          # limiting cpu & mem usage of a pod
          resources:
            requests:
              cpu: 800m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 400Mi
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      # add tolerations to restrict running on selected nodes
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/os: linux

---
kind: Service
apiVersion: v1
metadata:
  name: upg-loadme-app
  namespace: demo
spec:
  selector:
    app: upg-loadme-app
  type: ClusterIP
  ports:
  - name: app-port
    protocol: TCP
    port: 8081
    targetPort: 8081
